UtahLiveDataTest/src/objects/FINETVendorAddress__c.object
<CustomObject>
    <description>This is FINET Vendor address object</description>
    <fields>
        <fullName>AddressType__c</fullName>
        <label>AddressType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CityName__c</fullName>
        <label>City Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINETVendor__c</fullName>
        <label>FINETVendor</label>
        <referenceTo>FINETVendor__c</referenceTo>
        <relationshipLabel>FINETVendorAddresses</relationshipLabel>
        <relationshipName>FINETVendorAddresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street1Name__c</fullName>
        <label>Street 1 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2Name__c</fullName>
        <label>Street 2 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>prin_cntac__c</fullName>
        <description>Exact field name from the FINET table</description>
        <label>prin_cntac</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>FINETVendorAddress</label>
    <nameField>
        <label>FINETVendorAddress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FINETVendorAddresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>